--- a/src/Pages/ProductDescription/ProductDescription.css
+++ b/src/Pages/ProductDescription/ProductDescription.css
@@ -45,19 +45,42 @@ p{
   width: 100%; /* for IE 6 */
 }
 
+
 h6 { 
   position: absolute; 
-  top: 75%; 
+  top: 70%; 
   left: 0; 
   width: 100%;
 }
 
 h6 span { 
-  color: white; 
-  font: bold 24px/45px Helvetica, Sans-Serif; 
+  color: rgb(0, 0, 0);
+  font:  24px/45px Helvetica, Sans-Serif; 
   text-transform: uppercase;
   letter-spacing: 4px;  
   background: rgb(0, 0, 0); /* fallback color */
-  background: rgba(0, 0, 0, 0.7);
+  background: rgb(203, 211, 199);
   padding: 10px; 
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+  h6 { 
+    position: absolute; 
+    top: 40%; 
+    left: 7.9%; 
+    width: 100%;
+  }
+  h6 span { 
+    color: rgb(0, 0, 0);
+    font:  24px/45px Helvetica, Sans-Serif; 
+    text-transform: uppercase;
+    letter-spacing: 4px;  
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgb(203, 211, 199);
+    padding: 10px; 
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+  }
 }
