--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -43,7 +43,7 @@
       color: black;
       font-weight: bold;
       padding-left: 2%;
-      padding-top: 5%;
+      /* padding-top: 5%; */
       text-align: center;
     }
     
@@ -86,25 +86,6 @@
       color: rgb(21, 41, 13);
     }
     
-    /* Buttons */
-    .btn{
-      box-sizing: border-box;
-      background-color: transparent;
-      border: 2px solid #404442;
-      border-radius: 0.6em;
-      color: #000000;
-      font-size: 1rem;
-      font-weight: 400;
-      padding: 5% 15%;
-      text-align: center;
-      font-weight: 700;
-      -webkit-transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
-      transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
-    }
-    
-    .btn:hover {
-      box-shadow: 0 0 40px 40px #BFCAB9 inset;
-    }
     
     /*Frontpage top banner*/
     .rowPicture{
