--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -14,7 +14,7 @@
      /*  overflow: hidden;
       display: block;
       position: relative; */
-      padding-bottom: 100px; /* height of your footer */
+      /* padding-bottom: 100px; */ /* height of your footer */
      }
 
     /*Fonts*/
